# zmq-xml-thread-poc

./: .gitignore  CMakeLists.txt  COPYING  README.md
cmake/: contrib.cmake  mingw_deploy.cmake
src/: main.cpp  xml_document.cpp  xml_document.hpp
src/processor/: filter.cpp  filter.hpp  node.cpp  node.hpp  pipe.cpp  pipe.hpp  pipe_connection_type.hpp  sink.cpp  sink.hpp  tap.cpp  tap.hpp
src/processor/sinks/: sink_file.cpp  sink_file.hpp
src/processor/taps/: tap_file.cpp  tap_file.hpp
src/types/: multidigraph.hpp  multidigraph.tpp  uuid.cpp  uuid.hpp
src/util/: error_message.hpp  error_message.tpp  file_io.cpp  file_io.hpp  sfinae.hpp
src/xml/: xml_document.cpp  xml_document.hpp  xml_error.cpp  xml_error.hpp  xml_node.cpp  xml_node.hpp  xml_schema.cpp  xml_schema.hpp  xml_validator.cpp  xml_validator.hpp
src/xml/node/: xml_node.cpp  xml_node.hpp  xml_node_cdata.cpp  xml_node_cdata.hpp  xml_node_comment.cpp  xml_node_comment.hpp  xml_node_element.cpp  xml_node_element.hpp  xml_node_text.cpp  xml_node_text.hpp
xsd/: xsd-pipe.xsd  xsd_pipe.hpp.in
